# SpaceXplorer

./: CMakeLists.txt  Doing.txt  build.bat  difficulty.txt  files.c  files.h  funcs.c  funcs.h  highscore.txt  main.c  structs.c  structs.h
Document/: .~lock.Development Log for Software Design example template.docx#  Development Log for Software Design example template.docx  Flowchart main.drawio  Marks and Feedback for mini coursework UFMFGT 24 25.xlsx  Mini Coursework 2425.docx  func pseudo.txt  funcs description.txt
Document/not yet/: UFMFGT-30-1 Mini Coursework - Oral Exam - Assessment brief_2024-25(2).docx
Document/read/: UFMFGT-30-1 Mini Coursework - Report - Assessment brief_2024-25(2).docx  UFMFGT-30-1 Portfolio Log Book Assessment brief_2024-25(2)(1).docx
